--- a/index.html
+++ b/index.html
@@ -3,9 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Vob Referral</title>
+  <style>
+    /* Ensure html and body take up full height */
+    html, body {
+      height: 100%;
+      margin: 0;
+      padding: 0;
+      overflow: hidden; /* Prevent scrolling */
+    }
+
+    /* Make iframe take up full height */
+    iframe {
+      height: 100%;
+      width: 100%;
+      border: none; /* Remove iframe border */
+    }
+  </style>
 </head>
 <body>
-  <iframe src="https://script.google.com/macros/s/AKfycbz1_y1aOBChYisLafMmHuqYL0g-h4Esh79mbfNZMEG4raUQKHjW7Buz5PHEJkFsVE4O/exec"></iframe>
+  <iframe src="https://script.google.com/macros/s/AKfycbxlyogBznpn59uRzmeuSQa3G8aCr0tTiRAbqryGfyTuyFWz9DMi6yA90_utM7eIju3r/exec"></iframe>
 </body>
 </html>
